# StreetsOfRageProject

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  build.sh  disassemble.sh  disassemble_iterative.sh  disassemble_nolabels.sh  discover_aux.sh  discover_aux_fast.sh  update_submodules.sh
.agents/skills/control-megadrive-game/: SKILL.md
.agents/skills/control-megadrive-game/agents/: openai.yaml
.agents/skills/control-megadrive-game/references/: project-targets.md  python-client.md
.agents/skills/megadrive-remote/: SKILL.md
.agents/skills/megadrive-remote/agents/: openai.yaml
.agents/skills/megadrive-remote/scripts/: enter_first_level.py  observe_timeline.py  probe.py
.agents/skills/reimplement-subroutine/: SKILL.md
.agents/skills/reimplement-subroutine/references/: patterns.md
.grok/skills/reimplement-subroutine/references/: patterns.md
ai_play/: README.md  __init__.py  __main__.py  actions.py  environment.py  event_detector.py  perceiver.py  requirements-train.txt  rewards.py  training.py  weights.py
ai_play/tests/: __init__.py  test_actions.py  test_environment.py  test_event_detector.py  test_perceiver.py  test_rewards.py  test_training.py  test_weights.py
autoplay/: README.md
code-analysis/: aux_addresses.txt
scripts/: build  configure_controls  disassemble_to_asm  discover_aux_conservative  discover_aux_smart  generate_cpp  generate_cpp_and_build  generate_cpp_build_and_run  run  update_submodules
src/: CMakeLists.txt  data_types.hpp  main.cpp
src/art/: BackgroundTileData.hpp  BackgroundTileData0.hpp  BackgroundTileData1.hpp  CloudTileData.hpp  DuckTileData.hpp  GirlTileData.hpp  convert_art.py
src/config/: ControlsConfigStore.cpp  ControlsConfigStore.hpp
src/config/controls/: ControlsConfig.hpp  ControlsConfigUI.cpp  ControlsConfigUI.hpp  KeyBindScreen.cpp  KeyBindScreen.hpp  MainMenuScreen.cpp  MainMenuScreen.hpp  PlayerConfigScreen.cpp  PlayerConfigScreen.hpp  Screen.hpp  UIRenderer.cpp  UIRenderer.hpp
src/runtime_tests/: TestFontPNG.cpp  TestFontPNG.hpp  TestFontSDL.cpp  TestFontSDL.hpp
src/runtime_tests/controllers/: TestControllers.cpp  TestControllers.hpp
src/runtime_tests/sound/: AudioHeadlessTest.cpp  AudioHeadlessTest.hpp  TestSound.cpp  TestSound.hpp
src/runtime_tests/vdp_tests/: TestVDP.hpp  TestVDPRunner.cpp  TestVDPSetup.cpp  TestVDPTest01.cpp  TestVDPTest02.cpp  TestVDPTest03.cpp  TestVDPTest04.cpp  TestVDPTest05.cpp  TestVDPTest06.cpp  TestVDPTest07.cpp  TestVDPTest08.cpp  TestVDPTest09.cpp  TestVDPTest10.cpp  TestVDPTest11.cpp  TestVDPTest12.cpp  TestVDPTest13.cpp  TestVDPTest14.cpp  TestVDPTest15.cpp  TestVDPTest16.cpp  TestVDPTest17.cpp  TestVDPTest18.cpp  TestVDP_expected.txt
src/system/: MegaDriveEnvironment.cpp  MegaDriveEnvironment.hpp
src/system/controllers/: Controllers.cpp  Controllers.hpp
src/system/cpu/: CPU68K.hpp
src/system/graphics/: Framebuffer.cpp  Framebuffer.hpp  VDP.cpp  VDP.hpp  VDPPort.cpp  VDPPort.hpp  VDPRenderer.cpp  VDPRenderer.hpp  VDPRendererDebug.cpp  VDPRendererDebug.hpp  VDPState.cpp  VDPState.hpp  VDPTile.cpp  VDPTile.hpp
src/system/memory/: SystemMemory.cpp  SystemMemory.hpp
src/system/sound/: Sound.cpp  Sound.hpp
src/system/sound/gpgx_sound/: blip_buf.h  osd_cpu.h  psg.c  psg.h  psg_shared.h  types.h  ym3438.h
src/system/z80/: Z80.cpp  Z80.hpp
src/system/z80/gpgx_z80/: z80.c  z80.h
src/system/z80/mame_z80/: shared.h  z80.c  z80.h
src/util/font/: Font.cpp  Font.hpp  FontData.hpp
src/util/image/: Image.cpp  Image.hpp
tests/: cpu68k_test.cpp
tools/: UserManual.md  __init__.py  __main__.py  main.py
tools/common/: __init__.py  addresses.py
tools/disassembler/: __init__.py  __main__.py  decoder.py  disassembler.py  formatter.py  instruction.py  main.py  rom.py  rom_map.py
tools/disassembler/tests/: __init__.py  test_decoder.py  test_disassembler.py  test_formatter.py  test_rom_map.py  test_structured_ea.py
tools/iterative_disasm/: __init__.py  script.py
tools/label_diff/: __init__.py  map_label_gaps.py  script.py
tools/recompiler/: DESIGN.md  M68KMacros.hpp  __init__.py  __main__.py  cpp_semantics.py  ea_codegen.py  generator.py  main.py  opcodes.py  regions.py
tools/recompiler/tests/: run_macro_tests.sh  test_codegen.py  test_m68k_macros.cpp
tools/remove_data_locations/: __init__.py  __main__.py
tools/speculative_scan/: __init__.py  __main__.py  main.py
tools/speculative_scan/tests/: test_speculative_scan.py
tools/tests/: __init__.py  test_cli.py
